update DTOUtils